# cpp_red

w1/: CMakeLists.txt  ___templates.cpp  airline_ticket.h  deque.cpp  logger.cpp  max_element_if.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  uniq_id.cpp  update_field.cpp
w2/: ebook_fast.cpp  ebook_slow.cpp  hotel.cpp  leaner.cpp  slow.cpp  sort_students.cpp  test_alg.cpp  test_hotel.cpp
w3/: airport_counter.cpp  linked_list.cpp  o_pool.cpp  optimization.cpp  simple_vector.h  sportsmen.cpp  stack_vector.h  string_set.cpp  swap_sort_copy.cpp  text_editor.cpp  translator.cpp
w4/: http_request.h  server_stats.cpp  stats.cpp  stats.h  string_view_test.cpp  text_editor.cpp
w5/: concurrent_map.cpp  explore_key_words.cpp  group_heavy_strings.cpp  josephus_permutation.cpp  matrix_sum.cpp  merge_sort_3.cpp  priority_collection_2.cpp  priority_con.cpp  simple_vector.cpp  simple_vector.h  simple_vector_2.h  split_into_sentences.cpp  synchronized.cpp
w5/1/: simple_vector_a.h
w6/: main.cpp  profile_extendet.h  search_server.cpp  search_server.h
w6/part_1/: main.cpp  search_server.cpp  search_server.h  test_runner.h
w6/starter_files/: search_server.cpp
w6/temp/: search_server.cpp
