cmake_minimum_required(VERSION 3.17)
project(w1)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)

add_executable(w1
#        logger.cpp
                max_element_if.cpp
        #        sort_by.cpp
                test_runner.h
#        airline_ticket.h
#        update_field.cpp
#        print_values.cpp
#        uniq_id.cpp
#        table.cpp
#        deque.cpp
#        ___templates.cpp
#        paginator.cpp
        )
